# Traffic-Analysis-System

./: README.md
Advance-Traffic-Analysis/: README.md  app.py  pyproject.toml  requirements.txt
Advance-Traffic-Analysis/backend/: algorithms.py  config.py  incidents.csv  ingest.py  models.py
Advance-Traffic-Analysis/static/: style.css
Advance-Traffic-Analysis/templates/: about.html  base.html  dashboard.html  index.html  login.html  report.html  route-planner.html  script.js  style.css
